# revealpy

./: .gitignore  LICENSE.txt  README.md  examples.py  pyproject.toml
revealpy/: __init__.py
revealpy/core/: content.py  exporter.py  html_generator.py  layouts.py  presentation.py
revealpy/utils/: export_pptx.py  helpers.py
